Made courses clickable with a smooth animation, added option to enroll to the course, no functionality yet.

--- a/courses.html
+++ b/courses.html
@@ -69,5 +69,13 @@
     <script src="assets/js/data/courses.js"></script>
     <script src="assets/js/courses.js"></script>
 
+    <!-- COURSE MODAL -->
+    <div id="course-modal" class="modal-overlay">
+    <div class="modal-content">
+        <span id="modal-close" class="modal-close">&times;</span>
+        <div id="modal-body"></div>
+      </div>
+    </div>
+
   </body>
 </html>
