Fixed global navigation bar and font inconsistencies

--- a/pieces/nav.html
+++ b/pieces/nav.html
@@ -1,5 +1,8 @@
 <nav>
+  <!-- TOP BAR -->
   <div class="nav-top">
+    
+    <!-- MOBILE MENU ICON -->
     <div class="nav-menu" id="openMenu">
       <div class="menu-bars">
         <div class="menu-line" id="line1"></div>
@@ -8,33 +11,36 @@
       <span class="menu-span">Menu</span>
     </div>
 
+    <!-- LOGO -->
     <h2 class="logo">
       <a href="index.html">E-learning</a>
     </h2>
 
-    <a href="">Sign Up</a>
+    <!-- SIGN UP BUTTON -->
+    <a class="signup-btn" href="register.html">Sign Up</a>
   </div>
 
+  <!-- EXPANDABLE MENU (DESKTOP + MOBILE) -->
   <div class="nav-link-menu" id="navLinks">
+
     <div class="group-link">
-      <span>Courses</span>
+      <span>Explore</span>
       <a class="menu" href="categories.html">Categories</a>
-
-      <a class="menu" href="courses.html">Categories</a>
       <a class="menu" href="courses.html">Courses</a>
-
     </div>
 
     <div class="group-link">
-      <span>Lists</span>
+      <span>Resources</span>
       <a class="menu" href="books.html">Book List</a>
       <a class="menu" href="videos.html">Video List</a>
     </div>
+
     <div class="group-link">
-      <span>View our Team</span>
+      <span>About Us</span>
       <a class="menu" href="team.html">Team</a>
     </div>
 
-    <a href="register.html">Register</a>
+    <a class="menu register-link" href="register.html">Register</a>
+
   </div>
 </nav>
