Filled the contents of the Book List section, along with similar functionality to the Courses section

--- a/books.html
+++ b/books.html
@@ -1,33 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Books</title>
+    <title>Book List</title>
 
+    <!-- CSS IN THE SAME ORDER AS COURSES.HTML -->
     <link rel="stylesheet" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/layout.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-..."
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
 
+    <!-- Google Font (same position as courses.html) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-  </head>
-  <body>
-    <!--nav same for every page-->
+</head>
+
+<body class="books-page-active">
+
     <nav id="site-nav"></nav>
     <script src="assets/js/ui/nav.js"></script>
-    <!--nav-->
-  </body>
+    <script src="assets/js/ui/responsive.js"></script>
+
+    <header class="intro-container" style="min-height:auto; padding:3rem 1rem;">
+        <div class="title-container">
+            <h1>Book List</h1>
+            <p>Explore books related to programming, networking, security and more.</p>
+        </div>
+    </header>
+
+    <section class="courses-page">
+        <div class="course-layout">
+
+            <!-- FILTER SIDEBAR -->
+            <aside class="filter-sidebar">
+                <h2>Filters</h2>
+
+                <div class="filter-box">
+                    <label>Category</label>
+                    <select id="filter-category">
+                        <option value="all">All</option>
+                        <option value="programming">Programming</option>
+                        <option value="networks">Networks</option>
+                        <option value="security">Cybersecurity</option>
+                        <option value="databases">Databases</option>
+                    </select>
+                </div>
+
+                <div class="filter-box">
+                    <label class="checkbox-wrapper">
+                        <input type="checkbox" id="filter-available" />
+                        Only available
+                    </label>
+                </div>
+            </aside>
+
+            <!-- BOOK GRID -->
+            <div class="course-grid" id="book-list"></div>
+
+        </div>
+    </section>
+
+    <!-- BOOK MODAL -->
+    <div id="book-modal" class="modal-overlay">
+        <div class="modal-content">
+            <span id="modal-close" class="modal-close">&times;</span>
+            <div id="modal-body"></div>
+        </div>
+    </div>
+
+    <script src="assets/js/data/books.js"></script>
+    <script src="assets/js/books.js"></script>
+
+</body>
 </html>
