--- a/register.html
+++ b/register.html
@@ -1,33 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register Page</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Register</title>
 
-    <link rel="stylesheet" href="assets/css/component.css" />
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/css/layout.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-..."
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+  <!-- Shared styles -->
+  <link rel="stylesheet" href="assets/css/component.css" />
+  <link rel="stylesheet" href="assets/css/reset.css" />
+  <link rel="stylesheet" href="assets/css/theme.css" />
+  <link rel="stylesheet" href="assets/css/layout.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!--nav same for every page-->
-    <nav id="site-nav"></nav>
-    <script src="assets/js/ui/nav.js"></script>
-    <!--nav-->
-  </body>
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
+</head>
+
+<body class="register-page-active">
+
+  <nav id="site-nav"></nav>
+  <script src="assets/js/ui/nav.js"></script>
+  <script src="assets/js/ui/responsive.js"></script>
+
+  <main class="register-container">
+    <h1 class="reg-title">Create Your Account</h1>
+    <p class="reg-subtitle">Join our learning community and start your journey today.</p>
+
+    <form id="register-form" class="register-form">
+
+      <!-- USER INFORMATION -->
+      <section class="form-section">
+        <h2>User Information</h2>
+
+        <label for="fullName">Full Name</label>
+        <input type="text" id="fullName" required />
+
+        <label for="email">Email</label>
+        <input type="email" id="email" required />
+
+        <label for="dob">Date of Birth</label>
+        <input type="date" id="dob" required />
+      </section>
+
+      <!-- ACCOUNT DETAILS -->
+      <section class="form-section">
+        <h2>Account Details</h2>
+
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          required
+          pattern="(?=.*[A-Za-z])(?=.*[0-9]).{6,}"
+          title="Must contain at least 6 characters, one letter, and one number."
+        />
+
+        <label for="confirmPassword">Confirm Password</label>
+        <input type="password" id="confirmPassword" required />
+      </section>
+
+      <!-- LEARNING PREFERENCES -->
+      <section class="form-section">
+        <h2>Learning Preferences</h2>
+
+        <label for="interest">Preferred Category</label>
+        <select id="interest" required>
+          <option value="" disabled selected>Select one</option>
+          <option value="programming">Programming</option>
+          <option value="networks">Networks</option>
+          <option value="security">Cybersecurity</option>
+          <option value="databases">Databases</option>
+        </select>
+
+        <label>Experience Level</label>
+        <div class="radio-group">
+          <label><input type="radio" name="level" value="beginner" required /> Beginner</label>
+          <label><input type="radio" name="level" value="intermediate" /> Intermediate</label>
+          <label><input type="radio" name="level" value="advanced" /> Advanced</label>
+        </div>
+
+        <label for="goals">Learning Goals</label>
+        <textarea
+          id="goals"
+          name="goals"
+          rows="4"
+          placeholder="Tell us what you hope to achieve..."
+          required
+        ></textarea>
+
+        <label><input type="checkbox" id="newsletter" /> Receive course recommendations</label>
+      </section>
+
+      <button type="submit" class="submit-btn">Create Account</button>
+    </form>
+  </main>
+
+  <!-- SUMMARY POPUP -->
+  <div id="summary-modal" class="modal-overlay">
+    <div class="modal-content">
+      <span id="summary-close" class="modal-close">&times;</span>
+
+      <h2>Review Your Information</h2>
+      <div id="summary-content" class="modal-body"></div>
+
+      <button id="final-submit" class="modal-enroll-btn">Confirm Registration</button>
+    </div>
+  </div>
+
+  <!-- JS -->
+  <script src="assets/js/forms/register-form.js"></script>
+
+</body>
 </html>
