Update books page, filters and layout

--- a/pieces/nav.html
+++ b/pieces/nav.html
@@ -1,7 +1,6 @@
 <nav>
   <!-- TOP BAR -->
   <div class="nav-top">
-    
     <!-- MOBILE MENU ICON -->
     <div class="nav-menu" id="openMenu">
       <div class="menu-bars">
@@ -17,12 +16,11 @@
     </h2>
 
     <!-- SIGN UP BUTTON -->
-    <a class="signup-btn" href="register.html">Sign Up</a>
+    <a href="register.html">Sign Up</a>
   </div>
 
   <!-- EXPANDABLE MENU (DESKTOP + MOBILE) -->
   <div class="nav-link-menu" id="navLinks">
-
     <div class="group-link">
       <span>Explore</span>
       <a class="menu" href="categories.html">Categories</a>
@@ -40,7 +38,6 @@
       <a class="menu" href="team.html">Team</a>
     </div>
 
-    <a class="menu register-link" href="register.html">Register</a>
-
+    <a  href="register.html">Register</a>
   </div>
 </nav>
