--- a/books.html
+++ b/books.html
@@ -34,44 +34,194 @@
     </header>
 
     <section class="courses-page">
-        <div class="course-layout">
+      <div class="filter-button-results-wrapper">
+        <span id="results-count" class="results-count">0 Αποτελέσματα</span>
+        <button id="filter-toggle" class="filter-toggle">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="18"
+            height="18"
+            fill="currentColor"
+            class="bi bi-filter"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5m-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5"
+            />
+          </svg>
+          Filters
+        </button>
 
-            <!-- FILTER SIDEBAR -->
-            <aside class="filter-sidebar">
-                <h2>Filters</h2>
+        <button id="toggle-filter-menu" class="toggle-filter-menu">Hide Filters</button>
+      </div>
 
-                <div class="filter-box">
-                    <label>Category</label>
-                    <select id="filter-category">
-                        <option value="all">All</option>
-                        <option value="programming">Programming</option>
-                        <option value="networks">Networks</option>
-                        <option value="security">Cybersecurity</option>
-                        <option value="databases">Databases</option>
-                    </select>
-                </div>
+      <div id="filter-backdrop" class="filter-backdrop"></div>
 
-                <div class="filter-box">
-                    <label class="checkbox-wrapper">
-                        <input type="checkbox" id="filter-available" />
-                        Only available
-                    </label>
-                </div>
-            </aside>
+      <div class="course-layout">
+        <aside class="filter-sidebar">
+          <div class="filters-header">
+            <h2>Filters</h2>
+            <i class="fa-solid fa-x" id="filter-close"></i>
+          </div>
 
-            <!-- BOOK GRID -->
-            <div class="course-grid" id="book-list"></div>
+          <div class="filter-box">
+            <span>Category</span>
 
-        </div>
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="cat-programming"
+                type="checkbox"
+                name="filter-category"
+                value="programming"
+              />
+              <label class="cbx" for="cat-programming">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Programming</p>
+              </label>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="cat-networks"
+                type="checkbox"
+                name="filter-category"
+                value="networks"
+              />
+              <label class="cbx" for="cat-networks">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Networks</p>
+              </label>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="cat-security"
+                type="checkbox"
+                name="filter-category"
+                value="security"
+              />
+              <label class="cbx" for="cat-security">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Cybersecurity</p>
+              </label>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="cat-databases"
+                type="checkbox"
+                name="filter-category"
+                value="databases"
+              />
+              <label class="cbx" for="cat-databases">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Databases</p>
+              </label>
+            </div>
+          </div>
+
+          <div class="filter-box">
+            <span>Difficulty</span>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="diff-beginner"
+                type="checkbox"
+                name="filter-difficulty"
+                value="beginner"
+              />
+              <label class="cbx" for="diff-beginner">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Beginner</p>
+              </label>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="diff-intermediate"
+                type="checkbox"
+                name="filter-difficulty"
+                value="intermediate"
+              />
+              <label class="cbx" for="diff-intermediate">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Intermediate</p>
+              </label>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="diff-advanced"
+                type="checkbox"
+                name="filter-difficulty"
+                value="advanced"
+              />
+              <label class="cbx" for="diff-advanced">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Advanced</p>
+              </label>
+            </div>
+          </div>
+
+          <div class="filter-box">
+            <div class="checkbox-wrapper">
+              <input class="inp-cbx" id="filter-available" type="checkbox" />
+              <label class="cbx" for="filter-available">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Only available</p>
+              </label>
+            </div>
+          </div>
+        </aside>
+
+        <div class="course-grid" id="course-list"></div>
+      </div>
     </section>
+   
 
-    <!-- BOOK MODAL -->
-    <div id="book-modal" class="modal-overlay">
-        <div class="modal-content">
-            <span id="modal-close" class="modal-close">&times;</span>
-            <div id="modal-body"></div>
-        </div>
-    </div>
+
+
+
+
 
     <script src="assets/js/data/books.js"></script>
     <script src="assets/js/books.js"></script>
