--- a/categories.html
+++ b/categories.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Κατηγορίες Μαθημάτων</title>
 
-    <link rel="stylesheet" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/layout.css" />
     <link
@@ -62,5 +62,178 @@
         </div>
       </div>
     </header>
+
+    <!--all available courses description-->
+    <section class="all-categories-wrap">
+      <div class="all-categories-header">
+        <h1>All Available Courses</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          amco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </div>
+      <div class="all-categories-main-info">
+        <div class="slider-wrapper">
+          <div class="card-carousel">
+            <a class="card">
+              <div class="card-top"></div>
+              <div class="card-info">
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry.
+                </p>
+              </div>
+            </a>
+
+            <a class="card">
+              <div class="card-top"></div>
+              <div class="card-info">
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry.
+                </p>
+              </div>
+            </a>
+
+            <a class="card">
+              <div class="card-top"></div>
+              <div class="card-info"></div>
+            </a>
+
+            <a class="card">
+              <div class="card-top"></div>
+              <div class="card-info"></div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--courses-description-->
+    <div class="courses-presentation-wrap">
+      <!--desription course item-->
+      <div class="item-course-present">
+        <div class="item-course-header">
+          <h1>Programming</h1>
+          <p>
+            But I must explain to you how all this mistaken idea of denouncing
+            pleasure and praising pain was born and I will give you a complete
+            account of the system.
+          </p>
+        </div>
+
+        <div class="carousel-proposed-video-wrapper">
+          <div class="proposed-video-container">
+            <div class="proposed-video-carousel">
+              <div class="proposed-video-card">
+                <div class="proposed-video-vd-wrapper"></div>
+                <div class="proposed-video-content">Content 1</div>
+              </div>
+
+              <div class="proposed-video-card">
+                <div class="proposed-video-vd-wrapper"></div>
+                <div class="proposed-video-content">Content 2</div>
+              </div>
+
+              <div class="proposed-video-card">
+                <div class="proposed-video-vd-wrapper"></div>
+                <div class="proposed-video-content">Content 3</div>
+              </div>
+
+              <div class="proposed-video-card">
+                <div class="proposed-video-vd-wrapper"></div>
+                <div class="proposed-video-content">Content 4</div>
+              </div>
+
+              <div class="proposed-video-card">
+                <div class="proposed-video-vd-wrapper"></div>
+                <div class="proposed-video-content">Content 5</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="proposed-courses">
+          <h1>Find the top Courses</h1>
+
+          <a class="proposed-courses-item">
+            <div class="proposed-course-item-title">
+              <h2>Top course</h2>
+              <span class="menu-span">01</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </a>
+          <a class="proposed-courses-item">
+            <div class="proposed-course-item-title">
+              <h2>Top course</h2>
+              <span class="menu-span">02</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </a>
+          <a class="proposed-courses-item">
+            <div class="proposed-course-item-title">
+              <h2>Top course</h2>
+              <span class="menu-span">03</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </a>
+        </div>
+
+        <div class="proposed-course-books">
+          <div class="proposed-course-books-title">
+            <h1>The best books</h1>
+          </div>
+          <div class="slider-wrapper">
+            <div class="card-carousel">
+              <a class="card">
+                <div class="card-top"></div>
+                <div class="card-info">
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+              </a>
+
+              <a class="card">
+                <div class="card-top"></div>
+                <div class="card-info">
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+              </a>
+
+              <a class="card">
+                <div class="card-top"></div>
+                <div class="card-info"></div>
+              </a>
+
+              <a class="card">
+                <div class="card-top"></div>
+                <div class="card-info"></div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--desription course item-->
+    </div>
+
+    <script src="assets/js/ui/proposed-videos.js"></script>
   </body>
 </html>
