--- a/courses.html
+++ b/courses.html
@@ -12,73 +12,218 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
-    rel="stylesheet"
-/>
-
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
-  <body class="courses-page-active">
+  <body>
     <nav id="site-nav"></nav>
     <script src="assets/js/ui/nav.js"></script>
 
-    <header class="intro-container" style="min-height:auto;padding:3rem 1rem;">
+    <header class="intro-container courses">
       <div class="title-container">
-        <h1>All Courses</h1>
+        <h1>Courses</h1>
+   
         <p>Find the perfect learning path for your goals</p>
       </div>
     </header>
+    <div class="header-more-info-courses">
+      add video here
+    </div>
 
     <section class="courses-page">
+      <div class="filter-button-results-wrapper">
+        <span id="results-count" class="results-count">0 Αποτελέσματα</span>
+        <button id="filter-toggle" class="filter-toggle">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="18"
+            height="18"
+            fill="currentColor"
+            class="bi bi-filter"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5m-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5"
+            />
+          </svg>
+          Filters
+        </button>
+
+        <button id="toggle-filter-menu" class="toggle-filter-menu">Hide Filters</button>
+      </div>
+
+      <div id="filter-backdrop" class="filter-backdrop"></div>
+
       <div class="course-layout">
-
         <aside class="filter-sidebar">
-          <h2>Filters</h2>
-
-          <div class="filter-box">
-            <label>Category</label>
-            <select id="filter-category">
-              <option value="all">All</option>
-              <option value="programming">Programming</option>
-              <option value="networks">Networks</option>
-              <option value="security">Cybersecurity</option>
-              <option value="databases">Databases</option>
-            </select>
+          <div class="filters-header">
+            <h2>Filters</h2>
+            <i class="fa-solid fa-x" id="filter-close"></i>
           </div>
 
           <div class="filter-box">
-            <label>Difficulty</label>
-            <select id="filter-difficulty">
-              <option value="all">All</option>
-              <option value="beginner">Beginner</option>
-              <option value="intermediate">Intermediate</option>
-              <option value="advanced">Advanced</option>
-            </select>
+            <span>Category</span>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="cat-programming"
+                type="checkbox"
+                name="filter-category"
+                value="programming"
+              />
+              <label class="cbx" for="cat-programming">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Programming</p>
+              </label>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="cat-networks"
+                type="checkbox"
+                name="filter-category"
+                value="networks"
+              />
+              <label class="cbx" for="cat-networks">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Networks</p>
+              </label>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="cat-security"
+                type="checkbox"
+                name="filter-category"
+                value="security"
+              />
+              <label class="cbx" for="cat-security">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Cybersecurity</p>
+              </label>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="cat-databases"
+                type="checkbox"
+                name="filter-category"
+                value="databases"
+              />
+              <label class="cbx" for="cat-databases">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Databases</p>
+              </label>
+            </div>
           </div>
 
           <div class="filter-box">
-            <label class="checkbox-wrapper">
-              <input type="checkbox" id="filter-available" />
-              Only available
-            </label>
+            <span>Difficulty</span>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="diff-beginner"
+                type="checkbox"
+                name="filter-difficulty"
+                value="beginner"
+              />
+              <label class="cbx" for="diff-beginner">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Beginner</p>
+              </label>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="diff-intermediate"
+                type="checkbox"
+                name="filter-difficulty"
+                value="intermediate"
+              />
+              <label class="cbx" for="diff-intermediate">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Intermediate</p>
+              </label>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input
+                class="inp-cbx"
+                id="diff-advanced"
+                type="checkbox"
+                name="filter-difficulty"
+                value="advanced"
+              />
+              <label class="cbx" for="diff-advanced">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Advanced</p>
+              </label>
+            </div>
+          </div>
+
+          <div class="filter-box">
+            <div class="checkbox-wrapper">
+              <input class="inp-cbx" id="filter-available" type="checkbox" />
+              <label class="cbx" for="filter-available">
+                <span>
+                  <svg width="12" height="10" viewBox="0 0 12 10">
+                    <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                  </svg>
+                </span>
+                <p>Only available</p>
+              </label>
+            </div>
           </div>
         </aside>
 
         <div class="course-grid" id="course-list"></div>
-
       </div>
     </section>
 
     <script src="assets/js/data/courses.js"></script>
     <script src="assets/js/courses.js"></script>
-
-    <!-- COURSE MODAL -->
-    <div id="course-modal" class="modal-overlay">
-    <div class="modal-content">
-        <span id="modal-close" class="modal-close">&times;</span>
-        <div id="modal-body"></div>
-      </div>
-    </div>
-
   </body>
 </html>
