--- a/register.html
+++ b/register.html
@@ -1,116 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Register</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Register</title>
 
-  <!-- Shared styles -->
-  <link rel="stylesheet" href="assets/css/component.css" />
-  <link rel="stylesheet" href="assets/css/reset.css" />
-  <link rel="stylesheet" href="assets/css/theme.css" />
-  <link rel="stylesheet" href="assets/css/layout.css" />
+    <!-- Shared styles -->
+    <link rel="stylesheet" href="assets/css/component.css" />
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="assets/css/layout.css" />
 
-  <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"/>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-</head>
+  <body class="register-page-active">
+    <nav id="site-nav"></nav>
+    <script src="assets/js/ui/nav.js"></script>
+    <script src="assets/js/ui/responsive.js"></script>
 
-<body class="register-page-active">
+    <main class="register-container">
+      <h1>Create Your Account</h1>
+      <p>
+        Join our learning community and start your journey today.
+      </p>
 
-  <nav id="site-nav"></nav>
-  <script src="assets/js/ui/nav.js"></script>
-  <script src="assets/js/ui/responsive.js"></script>
+      <form id="register-form" class="register-form">
+        <!-- USER INFORMATION -->
 
-  <main class="register-container">
-    <h1 class="reg-title">Create Your Account</h1>
-    <p class="reg-subtitle">Join our learning community and start your journey today.</p>
-
-    <form id="register-form" class="register-form">
-
-      <!-- USER INFORMATION -->
-      <section class="form-section">
-        <h2>User Information</h2>
-
-        <label for="fullName">Full Name</label>
-        <input type="text" id="fullName" required />
-
-        <label for="email">Email</label>
-        <input type="email" id="email" required />
-
-        <label for="dob">Date of Birth</label>
-        <input type="date" id="dob" required />
-      </section>
-
-      <!-- ACCOUNT DETAILS -->
-      <section class="form-section">
-        <h2>Account Details</h2>
-
-        <label for="password">Password</label>
-        <input
-          type="password"
-          id="password"
-          required
-          pattern="(?=.*[A-Za-z])(?=.*[0-9]).{6,}"
-          title="Must contain at least 6 characters, one letter, and one number."
-        />
-
-        <label for="confirmPassword">Confirm Password</label>
-        <input type="password" id="confirmPassword" required />
-      </section>
-
-      <!-- LEARNING PREFERENCES -->
-      <section class="form-section">
-        <h2>Learning Preferences</h2>
-
-        <label for="interest">Preferred Category</label>
-        <select id="interest" required>
-          <option value="" disabled selected>Select one</option>
-          <option value="programming">Programming</option>
-          <option value="networks">Networks</option>
-          <option value="security">Cybersecurity</option>
-          <option value="databases">Databases</option>
-        </select>
-
-        <label>Experience Level</label>
-        <div class="radio-group">
-          <label><input type="radio" name="level" value="beginner" required /> Beginner</label>
-          <label><input type="radio" name="level" value="intermediate" /> Intermediate</label>
-          <label><input type="radio" name="level" value="advanced" /> Advanced</label>
+        <div class="from-row">
+          <div class="form-column">
+            <label for="firstName">First Name</label>
+            <input type="text" id="firstName" required />
+          </div>
+          <div class="form-column">
+            <label for="lastName">Last Name</label>
+            <input type="text" id="lastName" required />
+          </div>
         </div>
 
-        <label for="goals">Learning Goals</label>
-        <textarea
-          id="goals"
-          name="goals"
-          rows="4"
-          placeholder="Tell us what you hope to achieve..."
-          required
-        ></textarea>
+        <div class="form-column">
+          <label for="userName">Username</label>
+          <input type="text" id="userName" required />
+        </div>
 
-        <label><input type="checkbox" id="newsletter" /> Receive course recommendations</label>
-      </section>
+        <div class="form-column">
+          <label for="email">Email</label>
+          <input type="email" id="email" required />
+        </div>
 
-      <button type="submit" class="submit-btn">Create Account</button>
-    </form>
-  </main>
+        <div class="form-column">
+          <label for="dob">Date of Birth</label>
+          <input type="date" id="dob" required />
+        </div>
 
-  <!-- SUMMARY POPUP -->
-  <div id="summary-modal" class="modal-overlay">
-    <div class="modal-content">
-      <span id="summary-close" class="modal-close">&times;</span>
+        <!-- ACCOUNT DETAILS -->
 
-      <h2>Review Your Information</h2>
-      <div id="summary-content" class="modal-body"></div>
+        <div class="from-row">
+          <div class="form-column">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              id="password"
+              required
+              pattern="(?=.*[A-Za-z])(?=.*[0-9]).{6,}"
+              title="Must contain at least 6 characters, one letter, and one number."
+            />
+          </div>
+          <div class="form-column">
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" id="confirmPassword" required />
+          </div>
+        </div>
 
-      <button id="final-submit" class="modal-enroll-btn">Confirm Registration</button>
+        <!-- LEARNING PREFERENCES -->
+
+        <div class="form-column">
+          <label for="interest">Choose Category</label>
+          
+          <select id="interest" required>
+            <option value="" disabled selected>Preferred Category</option>
+            <option value="programming">Programming</option>
+            <option value="networks">Networks</option>
+            <option value="security">Cybersecurity</option>
+            <option value="databases">Databases</option>
+          </select>
+        </div>
+
+        <div class="form-column">
+            <label for="level">Experience level</label>
+        
+          <select id="level" required>
+            <option value="" disabled selected>Experience Level</option>
+            <option value="beginner">Beginner</option>
+            <option value="intermidiate">Intermidiate</option>
+            <option value="advanced">Advanced</option>
+
+          </select>
+        </div>
+
+        <div class="form-column">
+          <label for="goals">Learning Goals</label>
+          <textarea
+            id="goals"
+            name="goals"
+            rows="4"
+            placeholder="Tell us what you hope to achieve..."
+            required
+          ></textarea>
+        </div>
+
+        <div class="form-column last">
+          <input type="checkbox" id="newsletter" />
+          <label> Receive course recommendations</label>
+        </div>
+
+        <button type="submit" class="submit-btn">Create Account</button>
+      </form>
+    </main>
+
+    <!-- SUMMARY POPUP -->
+    <div id="summary-modal" class="modal-overlay">
+      <div class="modal-content">
+        <span id="summary-close" class="modal-close">&times;</span>
+
+        <h2>Review Your Information</h2>
+        <div id="summary-content" class="modal-body"></div>
+
+        <button id="final-submit" class="modal-enroll-btn">
+          Confirm Registration
+        </button>
+      </div>
     </div>
-  </div>
 
-  <!-- JS -->
-  <script src="assets/js/forms/register-form.js"></script>
-
-</body>
+    <!-- JS -->
+    <script src="assets/js/forms/register-form.js"></script>
+  </body>
 </html>
