--- a/courses.html
+++ b/courses.html
@@ -31,12 +31,46 @@
     <header class="intro-container courses">
       <div class="title-container">
         <h1>Courses</h1>
-   
+
         <p>Find the perfect learning path for your goals</p>
       </div>
     </header>
+
     <div class="header-more-info-courses">
-      add video here
+
+      <div class="slider-wrapper">
+        <div class="card-carousel">
+          <a class="card courses-card">
+            <div class="card-top"></div>
+            <div class="card-info">
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+            </div>
+          </a>
+
+          <a class="card courses-card">
+            <div class="card-top"></div>
+            <div class="card-info">
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+            </div>
+          </a>
+
+          <a class="card courses-card">
+            <div class="card-top"></div>
+            <div class="card-info"></div>
+          </a>
+
+          <a class="card courses-card">
+            <div class="card-top"></div>
+            <div class="card-info"></div>
+          </a>
+        </div>
+      </div>
     </div>
 
     <section class="courses-page">
@@ -58,7 +92,9 @@
           Filters
         </button>
 
-        <button id="toggle-filter-menu" class="toggle-filter-menu">Hide Filters</button>
+        <button id="toggle-filter-menu" class="toggle-filter-menu">
+          Hide Filters
+        </button>
       </div>
 
       <div id="filter-backdrop" class="filter-backdrop"></div>
