--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         <h1>Inforamatics E-learing WebSite</h1>
         <i class="fa-brands fa-42-group"></i>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Online hub for Informatics students, offering interactive courses,
+          curated resources, hands-on projects and self-paced learning paths.
+          Build solid foundations in programming, networking, databases and
+          cybersecurity, and track your progress anytime, from any device.
         </p>
       </div>
 
@@ -84,10 +86,13 @@
       <div class="description-intro">
         <h1>What we Contribute</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          We bring together structured learning, practical exercises and curated
+          resources to help Informatics students grow with confidence. Our
+          platform focuses on real skills: from core programming and networking
+          to security and databases, always aligned with academic needs and
+          modern industry practices. Whether you’re revising for exams or
+          building your portfolio, you’ll find clear guidance and tools to move
+          forward.
         </p>
       </div>
 
@@ -96,14 +101,15 @@
           <div class="description-card-details">
             <h1>MAIN INTRO</h1>
             <p>
-              It is a long established fact that a reader will be distracted by
-              the readable content of a page when looking at its layout. The
-              point of using Lorem Ipsum is that it has a more-or-less normal
-              distribution of letters, as opposed to using 'Content here,
-              content here', making it look like readable English. Many desktop
-              publishing packages and web page editors now use Lorem Ipsum as
-              their default model text, and a search for 'lorem ipsum' will
-              uncover many web sites still in their infancy.
+              Welcome to our Informatics E-Learning website – a space designed
+              to support your studies with clear explanations, hands-on material
+              and organized content. Instead of scattered notes and endless
+              links, you get a single hub where courses, books, videos and
+              practice resources are all connected. Browse topics at your own
+              pace, revisit difficult concepts, and follow structured paths that
+              match your current level. Our goal is simple: to make complex
+              subjects in computing feel understandable, practical and directly
+              useful for your academic journey and future career.
             </p>
           </div>
 
@@ -124,14 +130,13 @@
           <div class="description-card-details">
             <h1>COURSE CATEGORIES</h1>
             <p>
-              It is a long established fact that a reader will be distracted by
-              the readable content of a page when looking at its layout. The
-              point of using Lorem Ipsum is that it has a more-or-less normal
-              distribution of letters, as opposed to using 'Content here,
-              content here', making it look like readable English. Many desktop
-              publishing packages and web page editors now use Lorem Ipsum as
-              their default model text, and a search for 'lorem ipsum' will
-              uncover many web sites still in their infancy.
+              Explore carefully organized course categories covering
+              programming, networks, databases, cybersecurity and more. Each
+              category groups together lessons, assignments and supporting
+              materials so you always know where to start and what to study
+              next. You can filter content by difficulty, focus on specific
+              skills, and follow clear progress from beginner to more advanced
+              topics without feeling lost in information overload.
             </p>
           </div>
 
@@ -150,14 +155,14 @@
           <div class="description-card-details">
             <h1>BOOKS & VIDEO LISTS</h1>
             <p>
-              It is a long established fact that a reader will be distracted by
-              the readable content of a page when looking at its layout. The
-              point of using Lorem Ipsum is that it has a more-or-less normal
-              distribution of letters, as opposed to using 'Content here,
-              content here', making it look like readable English. Many desktop
-              publishing packages and web page editors now use Lorem Ipsum as
-              their default model text, and a search for 'lorem ipsum' will
-              uncover many web sites still in their infancy.
+              Complement your courses with curated book and video
+              recommendations selected specifically for Informatics students.
+              Instead of random search results, you’ll find trusted textbooks,
+              practical guides and high-quality tutorials that match your level
+              and interests. Use these lists to deepen your understanding,
+              prepare for exams, or explore new areas like cybersecurity, data
+              analysis and software development with reliable, up-to-date
+              resources.
             </p>
           </div>
 
@@ -177,14 +182,13 @@
           <div class="description-card-details">
             <h1>OUR TEAM</h1>
             <p>
-              It is a long established fact that a reader will be distracted by
-              the readable content of a page when looking at its layout. The
-              point of using Lorem Ipsum is that it has a more-or-less normal
-              distribution of letters, as opposed to using 'Content here,
-              content here', making it look like readable English. Many desktop
-              publishing packages and web page editors now use Lorem Ipsum as
-              their default model text, and a search for 'lorem ipsum' will
-              uncover many web sites still in their infancy.
+              Behind the platform is a team of instructors, students and
+              contributors who share a passion for Informatics and digital
+              learning. We continuously review content, refresh examples and
+              improve the learning paths based on feedback from real users. Our
+              aim is not only to provide material, but to create a supportive
+              environment where questions are welcome, learning is transparent
+              and every student feels they can make steady progress.
             </p>
           </div>
 
@@ -216,7 +220,7 @@
       </div>
 
       <div class="courses-description-video-wrapper">
-        <h1>ADD video later</h1>
+        
       </div>
 
       <div class="courses-detail-accordion">
