--- a/courses.html
+++ b/courses.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/layout.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,51 +30,25 @@
     <script src="assets/js/ui/nav.js"></script>
 
     <header class="intro-container courses">
-      <div class="title-container">
-        <h1>Courses</h1>
+      <div class="title-container courses">
+        <h1>Choose From Course List</h1>
 
         <p>Find the perfect learning path for your goals</p>
+        <a href="#choose-category">Start Now</a>
       </div>
+
+      <video
+        class="visual-video"
+        src="assets/images/6963744-sd_960_540_25fps.mp4"
+        autoplay
+        muted
+        loop
+        playsinline
+      ></video>
+
     </header>
 
-    <div class="header-more-info-courses">
-
-      <div class="slider-wrapper">
-        <div class="card-carousel">
-          <a class="card courses-card">
-            <div class="card-top"></div>
-            <div class="card-info">
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-            </div>
-          </a>
-
-          <a class="card courses-card">
-            <div class="card-top"></div>
-            <div class="card-info">
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-            </div>
-          </a>
-
-          <a class="card courses-card">
-            <div class="card-top"></div>
-            <div class="card-info"></div>
-          </a>
-
-          <a class="card courses-card">
-            <div class="card-top"></div>
-            <div class="card-info"></div>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <section class="courses-page">
+    <section class="courses-page" id="choose-category">
       <div class="filter-button-results-wrapper">
         <span id="results-count" class="results-count">0 Αποτελέσματα</span>
         <button id="filter-toggle" class="filter-toggle">
