--- a/books.html
+++ b/books.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book List</title>
+    <title>Courses</title>
 
-    <!-- CSS IN THE SAME ORDER AS COURSES.HTML -->
     <link rel="stylesheet" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/layout.css" />
-
-    <!-- Google Font (same position as courses.html) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+
 
 <body class="books-page-active">
 
@@ -26,11 +31,23 @@
     <script src="assets/js/ui/nav.js"></script>
     <script src="assets/js/ui/responsive.js"></script>
 
-    <header class="intro-container" style="min-height:auto; padding:3rem 1rem;">
-        <div class="title-container">
-            <h1>Book List</h1>
-            <p>Explore books related to programming, networking, security and more.</p>
-        </div>
+     <header class="intro-container courses">
+      <div class="title-container courses">
+        <h1>Choose From Book List</h1>
+
+        <p>Find the perfect learning path for your goals</p>
+        <a href="#choose-category">Start Now</a>
+      </div>
+
+      <video
+        class="visual-video"
+        src="assets/images/book_list_header.mp4"
+        autoplay
+        muted
+        loop
+        playsinline
+      ></video>
+
     </header>
 
     <section class="courses-page">
@@ -217,11 +234,6 @@
       </div>
     </section>
    
-
-
-
-
-
 
     <script src="assets/js/data/books.js"></script>
     <script src="assets/js/books.js"></script>
